# APMGSRN

./: .gitignore  LICENSE  README.md  environment.yml  requirements.txt  script.sh
Code/: inference_speed_test.py  model_to_torchscript.py  performance_bug.py  renderer.py  start_jobs.py  temp.py  test.py  test_ensemble.py  train.py  vis_charts.py
Code/BatchRunSettings/: AMRSRN_abla_decoder.json  AMRSRN_abla_decoder_test.json  AMRSRN_test.json  AMRSRN_test_allgrids.json  AMRSRN_train.json  AMRSRN_train_128grids.json  AMRSRN_train_16grids.json  AMRSRN_train_1grid.json  AMRSRN_train_256grids.json  AMRSRN_train_2grids.json  AMRSRN_train_32grids.json  AMRSRN_train_4grids.json  AMRSRN_train_64grids.json  AMRSRN_train_allgrids.json  ExpNet_test.json  ExpNet_train.json  NGP_11_decoder.json  NGP_11_res.json  NGP_12.json  NGP_8.json  NGP_9.json  NGP_abla_resolution.json  NGP_all.json  NGP_test.json  NGP_train.json  README.txt  afVSRN_test.json  afVSRN_train.json  aspect_ratio_global_test.json  aspect_ratio_global_test2.json  aspect_ratio_global_train.json  aspect_ratio_global_train2.json  aspect_ratio_test.json  aspect_ratio_test2 copy.json  aspect_ratio_train.json  aspect_ratio_train2.json  debug_AMRSRN_TCNN.json  debug_AMRSRN_TCNN_test.json  features_test.json  features_train.json  (+36 more)
Code/Batch_run_settings/: train.json
Code/Datasets/: datasets.py  download_JHUTDB.py  download_JHUTDB_new.py
Code/Models/: AMGSRN.py  AMRSRN.py  AMRSRN_TCNN.py  APMGSRN.py  ExpNet.py  GMMSRN.py  NGP.py  SigmoidNet.py  afVSRN.py  ensemble_SRN.py  fVSRN.py  layers.py  losses.py  models.py  options.py
Code/Other/: utility_functions.py  vis_charts.py  vis_io.py
Code/Renderer/: CMake_for_VTK.txt
Code/Renderer/NeuralSRN/: CMakeLists.txt  NeuralSRN.cpp  NeuralSRN.h  NeuralSRN.hpp  README.md  inference_speed.cpp
Code/UI/: .gitignore  README.md  app.py  renderer_app.py  (+1 more)
Colormaps/: Coolwarm.json  Coolwarmextended.json  Inferno.json  Lineargreen.json  Nyx.json  Plume.json  Rainbowdesaturated.json  Supernova.json  Turbo.json  Viridis.json  Xray.json  Yellowgrayblue.json  rotstrat.json
(+402 files in other folders)
